@@ -12,6 +12,7 @@ DIST grsecurity-sources-extras-4.9.54.tar.xz 2646488 SHA256 b30ec3a3acc1affcc119
 DIST grsecurity-sources-extras-4.9.56.tar.xz 2672508 SHA256 04e05202014f3b29a67489df81c81317d39d5a4cf6f54cece8ee22c9cd655ef1 SHA512 14d954c8318d4bd35a265555d081a620bda2d3a5244eeef7bf150267e03ecd7acc5da7fb20673c4535d5363691fe2a9015616a5a440e43c0ff5824b5ca8fc05c WHIRLPOOL 6d1e7320927202f2b257b7017315768220e35558cc70072c666f1b0ecf7d5ff91460695629fb6ff4df30bcebbe56ea6b2f6a63d8945999798b442fd6785b9271
 DIST grsecurity-sources-extras-4.9.58.tar.xz 2692352 SHA256 6e523d29a005066ebbbff6b0c2b5db65513b006e20974f0f9021e6f2e6eac054 SHA512 506b850720850d87d49927e9e0c568804d6ea1043b0fc6c171e11eadf4344a8269e8da75d2061fef92fc8c7bc976f3f6f9af3c225a952ce0e8f3c94239a5854a WHIRLPOOL 70bd5fb93f2a07c68c5a93f2eaacb79bb0aad6bf2ac1140b51408cd91441d157dbcc17791f34529e01f03664aee987fc05d9f59a18f91e3f2b8d93623e29c574
 DIST grsecurity-sources-extras-4.9.59.tar.xz 2707208 SHA256 d762fe59ee49fd17d0df45b5a0385d6529461cb4c30fc0d4f8bb34d89b3cdea3 SHA512 3bac936e1bb3abd06bbe1c596a9e7342deedf92386e30a1796cca31df2193f8920f4ca5e865ca2ccfd2af145b22620433f84cc6fb59c5ef2c255781f64d8423b WHIRLPOOL 21637e797b14cfddad04a929b08d5d4fd949479d5f1ab7d01f12d75e1f057f1fe6baf9c1df375b08f69c67cb097f79a29308999cd60648698a32d91416baaa23
+DIST grsecurity-sources-extras-4.9.64.tar.xz 2779744 SHA256 b10630c0dd3b9c89d44652260c9418f6d9188d2839103a6b883959c2936e491c SHA512 1dbfbca58c7b55dd5e6cb80d81d4444440fbfe54f5b4a3dbe000c5300c51618eacfd61394c030f29f3fc02d6ecf5af09b7bdfc0523f185dd3ab242c1f479b43b WHIRLPOOL a27fffcf78d64a4c5d08a107eaf0bd3330862df17038c870ad6b044fba1f288fc3a43b0c049e83376c9b483099d7303d0cd2ebddc5d515c640f5e5fffc82904c
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
@@ -24,21 +25,22 @@ EBUILD grsecurity-sources-4.9.54.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8
 EBUILD grsecurity-sources-4.9.56.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.58.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
 EBUILD grsecurity-sources-4.9.59.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 2311 SHA256 95e932c16ba346f75442b4d44fa3843401830ff59b2079d92be6baf771c74ea9 SHA512 3bc95c1a6c6e9d3b60b9a5ffee3931bc082b35ebf79aed6cb6b3bfdbf02063604d7196f0a03835303ff7fa8d60180c70e5571b8c8a098b1693bd87fad5972e10 WHIRLPOOL 9b80c9df5877ff13dbd67c52b5037a85fde4de18c5d8f52097ab0d6dd737f6cf17e1fe29a877b25d01a8cd3aee658ecff7f3b73290099a34a33fb0ea6008c00e
+EBUILD grsecurity-sources-4.9.64.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 2506 SHA256 03cd307d2593338be544649ef11077f5a9403eff79a570d0faaa38589f28c623 SHA512 fc4fa6f3d34350d90ec0e7e3bdf22b14a087bd27765d556d5b98f5d8b8d06eb6328f1243d7d586b99409885ddae336e8df6d9548594a57e9dfb181180df05f49 WHIRLPOOL a3a8fe5c1d4d6b921bfc7541c20686278d1bfdc2fb847276f0b1703c94b39a3cc9427e723ac94d63b6aa43cab83b798251a036a3c8ec05fd7fa3cb66f645d5d8
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlnzmdoACgkQunvTUHGU
-RZ+Wyg/7B6kM/7y7FjUD2ZvSt8Z+arGBAd045PVXpIcWbakkGEchMe9W5X2lIC82
-ag2oo+ewvussGq/Ryjvvi9uBK7z7ZxhybHbc1v2t1DfYzAAHq6+dE54vu5ZeEv0Y
-Nvby6eNZza7kK549V1ISIartaaUxkzdnlUBKJsWMFOQQujjL/uYX2ZdeUSQkg8LC
-QRY3XT59Yq6bQ4QBeE295cgKG9WrMqXuw3YwrfuBvwSMj2cAX8xilbJhy+EXq9FE
-Yg3ymi1SG9Bb08bST5bMInUOyNX10IZYbSfGnTpYQqxYG2DCoQcVrNY1wryNFE6d
-50KQgPD3xBqfD2TUsLUAEYmHf833zuL6N2M1qdG0IqIsbszF61X0Bc3c2STOOrH0
-WWs4Xwk+rm54PtVDWVoPdxZtthVAUKNdCLQHDW5ecwBLKSxzAmk47JlsMwhOwTLX
-8PrRkxl98ul/PBiVFBSVpsuyWkAs+cKgeOXdBuGKlRqYPlhfO06b+Atwyukjlgxf
-uaHD9zHMSwaaKawmwriAJgAYPvy9LFB0WtP4Dlz6UF4tLjbZu9sERkl6nomT08uV
-XW/tUCn4Xp4AyJusbUAjNj7d7w+zWJ/uVj6VugXvnUqNp9b/dscg6pdEobAn1ruR
-/QrX2Qu8LokSaw4GnrXxJiXv+8mdMATc6LCvWvTq6NWrJVo3IDo=
-=xI3n
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAloW9DAACgkQunvTUHGU
+RZ9szRAAvXWlP9DeU6Gakm/VXunhtfz8uUdsQPjwqGFNJpHctzUJn1QifG1rjyjR
+fK/VcLOQPVVybV/zrINdLTjxe5DMbF0CMTLn0CmwSpXsmCAAcTWniboL5azt6dVF
+Bo55NSYTR+TLQzuSX+Dc4EIqVOoDLzqK9riU+DEJDJKYjLQI8Aox7l+k9LDgEDqB
+FixMaA1Gusqzejx2PilanLmsaCVdOH0qetViqFbw4EoZS3SdgZmuiZtqSdbD6YLG
+CRlm40woQqgs0w1F4abccExPiFcNjR0ynmMDFz3FNwZjaPij2JFIL6B/N93brE9H
+N3UT9ZmKOlmSTN0KfmLxGdkNBTwmkCAAGIQSJrah+GwUtT52pqEbrjmmNPwUBc4x
+mToyxYu3I63d/KjXkFO56BrMaSGdAsK9O/VhWgSrlJrMwyqiz9+mFuYZVjRTFgk4
+WPwJl4BA67GDsJMNYEesHIdwUx3D/MoYNSg1+R5AUBCqivB2X+0o/zWLQ/08r8Nv
+NIz2S28Sz2oMBqMOlvpnqWFzS4S5UQTQ7oLWXYCjA47YAORf0KW4GgrJsiP5pFSa
+ylFCSzh7DdYeJ157eCiKQ4GgySlqNVUOgNgbI+BtAGqJVcQ17+ZcW3rQcSTB3jJQ
+O8KFaDq7+xwIAjls/HH84aUWECi23ID476YnAoXWt3Be/5lCh6o=
+=HzQt
 -----END PGP SIGNATURE-----
